--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,14 @@
 </head>
 
 <body>
-    <section class="chat__section">
+    <section class="chat_section">
         <div class="brand">
             <img height="40" src="/chat-bubbles.png" alt="">
             <h1>ChattingApp</h1>
         </div>
-        <div class="message__area">
+        <div class="message_area">
         </div>
-        <div>
+        <div class="text_area">
             <textarea id="textarea" cols="30" rows="1" placeholder="Write a message..."></textarea>
         </div>
     </section>
