--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <body>
     <section class="chat_section">
         <div class="brand">
-            <img height="40" src="/chat-bubbles.png" alt="">
+            <img height="40" src="./images/chat-bubbles.png" alt="icon">
             <h1>ChattingApp</h1>
         </div>
         <div class="message_area">
